--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@ tags
 [._]*.un~
 
 # End of https://www.toptal.com/developers/gitignore/api/vim,macos
+nvim/spell/en.utf-8.add
+nvim/spell/en.utf-8.add.spl
