adds ghostty config

--- a/symlinks_config.conf
+++ b/symlinks_config.conf
@@ -1,3 +1,4 @@
 # Define an array of symbolic link sources and targets
 $(pwd)/nvim:$HOME/.config/nvim
 $(pwd)/lazygit/config.yml:$HOME/Library/Application\ Support/lazygit/config.yml
+$(pwd)/ghostty:$HOME/.config/ghostty
