--- a/symlinks_config.conf
+++ b/symlinks_config.conf
@@ -2,3 +2,4 @@
 $(pwd)/nvim:$HOME/.config/nvim
 $(pwd)/lazygit/config.yml:$HOME/Library/Application\ Support/lazygit/config.yml
 $(pwd)/ghostty:$HOME/.config/ghostty
+$(pwd)/aerospace:$HOME/.config/aerospace
