--- a/ghostty/config
+++ b/ghostty/config
@@ -1,4 +1,4 @@
-theme = catppuccin-latte
+theme = catppuccin-frappe
 window-padding-color = background
 font-thicken = true
 font-family = MesloLGS Nerd Font Mono
