--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -127,6 +127,7 @@ automatically-unhide-macos-hidden-apps = false
     alt-c = 'workspace C'
     alt-d = 'workspace D'
     alt-e = 'workspace E'
+    alt-f = 'workspace F'
     alt-g = 'workspace G'
     alt-i = 'workspace I'
     alt-n = 'workspace N'
@@ -159,6 +160,7 @@ automatically-unhide-macos-hidden-apps = false
     alt-shift-c = ['move-node-to-workspace C', 'workspace C']
     alt-shift-d = ['move-node-to-workspace D', 'workspace D']
     alt-shift-e = ['move-node-to-workspace E', 'workspace E']
+    alt-shift-f = ['move-node-to-workspace F', 'workspace F']
     alt-shift-g = ['move-node-to-workspace G', 'workspace G']
     alt-shift-i = ['move-node-to-workspace I', 'workspace I']
     alt-shift-m = ['move-node-to-workspace M', 'workspace M']
@@ -176,7 +178,7 @@ automatically-unhide-macos-hidden-apps = false
     alt-shift-y = ['move-node-to-workspace Y', 'workspace Y']
     alt-shift-z = ['move-node-to-workspace Z', 'workspace Z']
 
-    alt-f = 'fullscreen'
+    alt-enter = 'fullscreen'
     # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
     alt-tab = 'workspace-back-and-forth'
     # See: https://nikitabobko.github.io/AeroSpace/commands#move-workspace-to-monitor
@@ -213,10 +215,10 @@ automatically-unhide-macos-hidden-apps = false
 
 [[on-window-detected]]
     if.app-id = 'com.google.Chrome'
-    run = 'move-node-to-workspace B'
+    run = 'move-node-to-workspace D'
 
 [[on-window-detected]]
-    if.app-id = 'com.zen-browser.zen'
+    if.app-id = 'app.zen-browser.zen'
     run = 'move-node-to-workspace B'
 
 [[on-window-detected]]
@@ -225,9 +227,13 @@ automatically-unhide-macos-hidden-apps = false
 
 [[on-window-detected]]
     if.app-id = 'com.apple.iphonesimulator'
-    run = 'move-node-to-workspace T'
+    run = 'move-node-to-workspace F'
 
 [[on-window-detected]]
     if.app-id = 'com.tinyspeck.slackmacgap'
-    run = 'move-node-to-workspace s'
+    run = 'move-node-to-workspace S'
+
+[[on-window-detected]]
+    if.app-id = 'com.figma.Desktop'
+    run = 'move-node-to-workspace F'
 
