--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,4 +1,4 @@
-theme = catppuccin-macchiato
+theme = Catppuccin Macchiato
 window-padding-color = background
 font-thicken = true
 font-family = MesloLGS Nerd Font Mono
