--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -93,102 +93,102 @@ automatically-unhide-macos-hidden-apps = false
     # '''
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#layout
-    alt-slash = 'layout tiles horizontal vertical'
-    alt-comma = 'layout accordion horizontal vertical'
+    alt-ctrl-slash = 'layout tiles horizontal vertical'
+    alt-ctrl-comma = 'layout accordion horizontal vertical'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#focus
-    alt-h = 'focus left'
-    alt-j = 'focus down'
-    alt-k = 'focus up'
-    alt-l = 'focus right'
+    alt-ctrl-h = 'focus left'
+    alt-ctrl-j = 'focus down'
+    alt-ctrl-k = 'focus up'
+    alt-ctrl-l = 'focus right'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#move
-    alt-shift-h = 'move left'
-    alt-shift-j = 'move down'
-    alt-shift-k = 'move up'
-    alt-shift-l = 'move right'
+    alt-ctrl-shift-h = 'move left'
+    alt-ctrl-shift-j = 'move down'
+    alt-ctrl-shift-k = 'move up'
+    alt-ctrl-shift-l = 'move right'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#resize
-    alt-minus = 'resize smart -50'
-    alt-equal = 'resize smart +50'
+    alt-ctrl-minus = 'resize smart -50'
+    alt-ctrl-equal = 'resize smart +50'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
-    alt-1 = 'workspace 1'
-    alt-2 = 'workspace 2'
-    alt-3 = 'workspace 3'
-    alt-4 = 'workspace 4'
-    alt-5 = 'workspace 5'
-    alt-6 = 'workspace 6'
-    alt-7 = 'workspace 7'
-    alt-8 = 'workspace 8'
-    alt-9 = 'workspace 9'
-    alt-0 = 'workspace 10'
-    alt-a = 'workspace A' # In your config, you can drop workspace bindings that you don't need
-    alt-b = 'workspace B'
-    alt-c = 'workspace C'
-    alt-d = 'workspace D'
-    alt-e = 'workspace E'
-    alt-f = 'workspace F'
-    alt-g = 'workspace G'
-    alt-i = 'workspace I'
-    alt-n = 'workspace N'
-    alt-m = 'workspace M'
-    alt-o = 'workspace O'
-    alt-p = 'workspace P'
-    alt-q = 'workspace Q'
-    alt-r = 'workspace R'
-    alt-s = 'workspace S'
-    alt-t = 'workspace T'
-    alt-u = 'workspace U'
-    alt-v = 'workspace V'
-    alt-w = 'workspace W'
-    alt-x = 'workspace X'
-    alt-y = 'workspace Y'
-    alt-z = 'workspace Z'
+    alt-ctrl-1 = 'workspace 1'
+    alt-ctrl-2 = 'workspace 2'
+    alt-ctrl-3 = 'workspace 3'
+    alt-ctrl-4 = 'workspace 4'
+    alt-ctrl-5 = 'workspace 5'
+    alt-ctrl-6 = 'workspace 6'
+    alt-ctrl-7 = 'workspace 7'
+    alt-ctrl-8 = 'workspace 8'
+    alt-ctrl-9 = 'workspace 9'
+    alt-ctrl-0 = 'workspace 10'
+    alt-ctrl-a = 'workspace A' # In your config, you can drop workspace bindings that you don't need
+    alt-ctrl-b = 'workspace B'
+    alt-ctrl-c = 'workspace C'
+    alt-ctrl-d = 'workspace D'
+    alt-ctrl-e = 'workspace E'
+    alt-ctrl-f = 'workspace F'
+    alt-ctrl-g = 'workspace G'
+    alt-ctrl-i = 'workspace I'
+    alt-ctrl-n = 'workspace N'
+    alt-ctrl-m = 'workspace M'
+    alt-ctrl-o = 'workspace O'
+    alt-ctrl-p = 'workspace P'
+    alt-ctrl-q = 'workspace Q'
+    alt-ctrl-r = 'workspace R'
+    alt-ctrl-s = 'workspace S'
+    alt-ctrl-t = 'workspace T'
+    alt-ctrl-u = 'workspace U'
+    alt-ctrl-v = 'workspace V'
+    alt-ctrl-w = 'workspace W'
+    alt-ctrl-x = 'workspace X'
+    alt-ctrl-y = 'workspace Y'
+    alt-ctrl-z = 'workspace Z'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
-    alt-shift-1 = ['move-node-to-workspace 1', 'workspace 1']
-    alt-shift-2 = ['move-node-to-workspace 2', 'workspace 2']
-    alt-shift-3 = ['move-node-to-workspace 3', 'workspace 3']
-    alt-shift-4 = ['move-node-to-workspace 4', 'workspace 4']
-    alt-shift-5 = ['move-node-to-workspace 5', 'workspace 5']
-    alt-shift-6 = ['move-node-to-workspace 6', 'workspace 6']
-    alt-shift-7 = ['move-node-to-workspace 7', 'workspace 7']
-    alt-shift-8 = ['move-node-to-workspace 8', 'workspace 8']
-    alt-shift-9 = ['move-node-to-workspace 9', 'workspace 9']
-    alt-shift-0 = ['move-node-to-workspace 10', 'workspace 10']
-    alt-shift-a = ['move-node-to-workspace A', 'workspace A']
-    alt-shift-b = ['move-node-to-workspace B', 'workspace B'] 
-    alt-shift-c = ['move-node-to-workspace C', 'workspace C']
-    alt-shift-d = ['move-node-to-workspace D', 'workspace D']
-    alt-shift-e = ['move-node-to-workspace E', 'workspace E']
-    alt-shift-f = ['move-node-to-workspace F', 'workspace F']
-    alt-shift-g = ['move-node-to-workspace G', 'workspace G']
-    alt-shift-i = ['move-node-to-workspace I', 'workspace I']
-    alt-shift-m = ['move-node-to-workspace M', 'workspace M']
-    alt-shift-n = ['move-node-to-workspace N', 'workspace N']
-    alt-shift-o = ['move-node-to-workspace O', 'workspace O']
-    alt-shift-p = ['move-node-to-workspace P', 'workspace P']
-    alt-shift-q = ['move-node-to-workspace Q', 'workspace Q']
-    alt-shift-r = ['move-node-to-workspace R', 'workspace R']
-    alt-shift-s = ['move-node-to-workspace S', 'workspace S']
-    alt-shift-t = ['move-node-to-workspace T', 'workspace T']
-    alt-shift-u = ['move-node-to-workspace U', 'workspace U']
-    alt-shift-v = ['move-node-to-workspace V', 'workspace V']
-    alt-shift-w = ['move-node-to-workspace W', 'workspace W']
-    alt-shift-x = ['move-node-to-workspace X', 'workspace X']
-    alt-shift-y = ['move-node-to-workspace Y', 'workspace Y']
-    alt-shift-z = ['move-node-to-workspace Z', 'workspace Z']
+    alt-ctrl-shift-1 = ['move-node-to-workspace 1', 'workspace 1']
+    alt-ctrl-shift-2 = ['move-node-to-workspace 2', 'workspace 2']
+    alt-ctrl-shift-3 = ['move-node-to-workspace 3', 'workspace 3']
+    alt-ctrl-shift-4 = ['move-node-to-workspace 4', 'workspace 4']
+    alt-ctrl-shift-5 = ['move-node-to-workspace 5', 'workspace 5']
+    alt-ctrl-shift-6 = ['move-node-to-workspace 6', 'workspace 6']
+    alt-ctrl-shift-7 = ['move-node-to-workspace 7', 'workspace 7']
+    alt-ctrl-shift-8 = ['move-node-to-workspace 8', 'workspace 8']
+    alt-ctrl-shift-9 = ['move-node-to-workspace 9', 'workspace 9']
+    alt-ctrl-shift-0 = ['move-node-to-workspace 10', 'workspace 10']
+    alt-ctrl-shift-a = ['move-node-to-workspace A', 'workspace A']
+    alt-ctrl-shift-b = ['move-node-to-workspace B', 'workspace B'] 
+    alt-ctrl-shift-c = ['move-node-to-workspace C', 'workspace C']
+    alt-ctrl-shift-d = ['move-node-to-workspace D', 'workspace D']
+    alt-ctrl-shift-e = ['move-node-to-workspace E', 'workspace E']
+    alt-ctrl-shift-f = ['move-node-to-workspace F', 'workspace F']
+    alt-ctrl-shift-g = ['move-node-to-workspace G', 'workspace G']
+    alt-ctrl-shift-i = ['move-node-to-workspace I', 'workspace I']
+    alt-ctrl-shift-m = ['move-node-to-workspace M', 'workspace M']
+    alt-ctrl-shift-n = ['move-node-to-workspace N', 'workspace N']
+    alt-ctrl-shift-o = ['move-node-to-workspace O', 'workspace O']
+    alt-ctrl-shift-p = ['move-node-to-workspace P', 'workspace P']
+    alt-ctrl-shift-q = ['move-node-to-workspace Q', 'workspace Q']
+    alt-ctrl-shift-r = ['move-node-to-workspace R', 'workspace R']
+    alt-ctrl-shift-s = ['move-node-to-workspace S', 'workspace S']
+    alt-ctrl-shift-t = ['move-node-to-workspace T', 'workspace T']
+    alt-ctrl-shift-u = ['move-node-to-workspace U', 'workspace U']
+    alt-ctrl-shift-v = ['move-node-to-workspace V', 'workspace V']
+    alt-ctrl-shift-w = ['move-node-to-workspace W', 'workspace W']
+    alt-ctrl-shift-x = ['move-node-to-workspace X', 'workspace X']
+    alt-ctrl-shift-y = ['move-node-to-workspace Y', 'workspace Y']
+    alt-ctrl-shift-z = ['move-node-to-workspace Z', 'workspace Z']
 
-    alt-enter = 'fullscreen'
+    alt-ctrl-enter = 'fullscreen'
     # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
-    alt-tab = 'workspace-back-and-forth'
+    alt-ctrl-tab = 'workspace-back-and-forth'
     # See: https://nikitabobko.github.io/AeroSpace/commands#move-workspace-to-monitor
-    alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
+    alt-ctrl-shift-tab = 'move-workspace-to-monitor --wrap-around next'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#mode
-    alt-shift-semicolon = 'mode service'
-    alt-backspace = 'mode no-aero'
+    alt-ctrl-shift-semicolon = 'mode service'
+    alt-ctrl-backspace = 'mode no-aero'
 
 # 'service' binding mode declaration.
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -201,19 +201,18 @@ automatically-unhide-macos-hidden-apps = false
     # sticky is not yet supported https://github.com/nikitabobko/AeroSpace/issues/2
     #s = ['layout sticky tiling', 'mode main']
 
-    alt-shift-h = ['join-with left', 'mode main']
-    alt-shift-j = ['join-with down', 'mode main']
-    alt-shift-k = ['join-with up', 'mode main']
-    alt-shift-l = ['join-with right', 'mode main']
+    alt-ctrl-shift-h = ['join-with left', 'mode main']
+    alt-ctrl-shift-j = ['join-with down', 'mode main']
+    alt-ctrl-shift-k = ['join-with up', 'mode main']
+    alt-ctrl-shift-l = ['join-with right', 'mode main']
 
     down = 'volume down'
     up = 'volume up'
     shift-down = ['volume set 0', 'mode main']
 
-
 [mode.no-aero.binding]
     esc = 'mode main'
-    alt-backspace = 'mode main'
+    alt-ctrl-backspace = 'mode main'
 
 [[on-window-detected]]
     if.app-id = 'com.google.Chrome'
