--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -223,6 +223,10 @@ automatically-unhide-macos-hidden-apps = false
     run = 'move-node-to-workspace B'
 
 [[on-window-detected]]
+    if.app-id = 'com.apple.Safari'
+    run = 'move-node-to-workspace B'
+
+[[on-window-detected]]
     if.app-id = 'com.mitchellh.ghostty'
     run = 'move-node-to-workspace T'
 
