setup light theme

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,4 +1,4 @@
-theme = Catppuccin Macchiato
+theme = Catppuccin Latte
 window-padding-color = background
 font-thicken = true
 font-family = MesloLGS Nerd Font Mono
