--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -1,4 +1,3 @@
 git:
-  paging:
-    colorArg: always
-    pager: delta --paging=never
+  pagers:
+  - pager: delta --light --paging=never --line-numbers --hyperlinks --hyperlinks-file-link-format="lazygit-edit://{path}:{line}" 
