--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ tags
 # End of https://www.toptal.com/developers/gitignore/api/vim,macos
 nvim/spell/en.utf-8.add
 nvim/spell/en.utf-8.add.spl
+tmux/plugins/tpm_plugins
