--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -53,3 +53,5 @@ source-file $HOME/dotfiles/tmux/themes/cattppucin.tmux
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '$HOME/dotfiles/tmux/plugins/tpm/tpm'
+display-message "TMUX config loaded!"
+
