--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -1,4 +1,4 @@
-# Place a copy of this config to ~/.aerospace.toml
+
 # After that, you can edit ~/.aerospace.toml to your liking
 
 # You can use it to add commands that run after AeroSpace startup.
@@ -243,9 +243,9 @@ automatically-unhide-macos-hidden-apps = false
     run = 'move-node-to-workspace F'
 
 [[on-window-detected]]
-    if.app-id = 'com.nozbe4mac'
+    if.app-id = 'com.evernote.Evernote'
     run = 'move-node-to-workspace N'
 
 [[on-window-detected]]
-    if.app-id = 'com.evernote.Evernote'
-    run = 'move-node-to-workspace N'
+    if.app-id = 'com.microsoft.Outlook'
+    run = 'move-node-to-workspace M'
